# pacman-repo-stats

./: .kateproject  COPYING  Cargo.toml  Justfile  PKGBUILD.aur  PKGBUILD.local  README.adoc
src/: args.rs  main.rs  report.rs
