[package]
name = "pacman-repo-stats"
version = "0.4.0"

authors = ["Bhanupong Petchlert <bpetlert@gmail.com>"]

description = "Show usage statistics of repositories in pacman.conf"
documentation = "https://github.com/bpetlert/pacman-repo-stats"
homepage = "https://github.com/bpetlert/pacman-repo-stats"
license = "GPL-3.0-or-later"
readme = "README.adoc"
repository = "https://github.com/bpetlert/pacman-repo-stats"

edition = "2021"
publish = false

[dependencies]
alpm = "3.0.5"
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
pacmanconf = "2.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tabled = "0.15.0"
tracing = { version = "0.1.40", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }
