[package]
name = "pacman-repo-stats"
version = "0.5.1"

authors = ["Bhanupong Petchlert <bpetlert@gmail.com>"]

description = "Show usage statistics of repositories in pacman.conf"
documentation = "https://github.com/bpetlert/pacman-repo-stats"
homepage = "https://github.com/bpetlert/pacman-repo-stats"
license = "GPL-3.0-or-later"
readme = "README.adoc"
repository = "https://github.com/bpetlert/pacman-repo-stats"

edition = "2021"
publish = false

[dependencies]
alpm = "~4"
anyhow = "~1"
clap = { version = "~4.5", features = ["derive"] }
pacmanconf = "~3"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
tabled = "~0.16"
tracing = { version = "~0.1", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "~0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }
