[package]
name = "pacman-repo-stats"
version = "0.5.2"
edition = "2024"
description = "Show usage statistics of repositories in pacman.conf"
documentation = "https://github.com/bpetlert/pacman-repo-stats"
readme = "README.adoc"
homepage = "https://github.com/bpetlert/pacman-repo-stats"
repository = "https://github.com/bpetlert/pacman-repo-stats"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
alpm = "~5"
anyhow = "~1"
clap = { version = "~4.5", features = ["derive"] }
pacmanconf = "~3"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
tabled = "~0.20"
tracing = { version = "~0.1", features = [
  "max_level_debug",
  "release_max_level_debug",
] }
tracing-subscriber = { version = "~0.3", default-features = false, features = [
  "ansi",
  "env-filter",
  "fmt",
] }
